# FinAlerts

./: README.md  hello.py  main.py  pyproject.toml  pyproject.toml.bk  test.json
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  utils.py
backend/app/auth/: auth_handler.py
backend/app/routers/: auth.py  indices.py  routes.py  user.py
data/: nse_config.json
temp/: scripcode.csv
ui/: base.html  dashboard.html  dashboard_test.html  index.html  login.html  register.html
ui/components/: stats_price.html
ui/js/: app.js
